--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Tprice-90/gaming_franchise_backend#readme",
   "dependencies": {
     "@types/express": "^4.17.14",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^2.3.3"
   }
